cmake_minimum_required(VERSION 3.27)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm
        src/main.cpp
        src/SortDemo.cpp
        src/TreeDemo.cpp
        src/SelectDemo.cpp
        src/BTreeTestDemo.cpp
        src/ContainerDemo.cpp

        src/lang/Runnable.h
        src/lang/Comparable.h
        src/lang/Task.h
        src/lang/packaging/Integer.cpp
        src/lang/packaging/Integer.h
        src/lang/exception/Exception.h
        src/lang/exception/NullPointException.h
        src/lang/exception/IndexOutOfBoundException.h
        src/lang/exception/IllegalArgumentException.h
        src/lang/exception/IllegalStateException.h
        src/lang/exception/UnauthorizedException.h
        src/lang/exception/DownflowException.h
        src/lang/exception/OverflowException.h

        src/util/Arrays.h
        src/util/Random.h
        src/util/Random.cpp
        src/util/RandomContainer.h

        src/util/Encoder.h
        src/util/Decoder.h
        src/util/Comparator.h
        src/util/Times.cpp
        src/util/Times.h
        src/util/function/function.h

        src/util/sort/BucketSort.h
        src/util/sort/ComparisonSort.h
        src/util/sort/InsertionSort.h
        src/util/sort/MergeSort.h
        src/util/sort/QuickSort.h
        src/util/sort/CountSort.h
        src/util/sort/SortAlgorithm.h
        src/util/sort/RadixSort.h
        src/util/sort/EncodingSort.h

        src/lang/Array.h
        src/container/sequence/Stack.h
        src/container/sequence/StackLinkedList.h
        src/container/sequence/impl/StackLinkedList_impl.h
        src/container/sequence/impl/Stack_impl.h
        src/lang/Array_impl.h
        src/container/sequence/QueueLinkedList.h
        src/container/sequence/Queue.h
        src/container/sequence/impl/QueueLinkedList_impl.h
        src/container/sequence/impl/Queue_impl.h
        src/container/sequence/LinkedList.h
        src/container/Container.h
        src/container/sequence/SequentialAccessibleContainer.h
        src/container/associative/AssociativeContainer.h
        src/container/Heap.h
        src/container/sequence/PriorityQueue.h
        src/container/Heap_impl.h
        src/container/sequence/ArrayList.h
        src/container/sequence/impl/ArrayList_impl.h
        src/container/sequence/SingleLinkedList.h
        src/container/sequence/DoublyLinkedList.h
        src/container/sequence/QueueLinkedNode.h
        src/container/sequence/StackLinkedNode.h

        src/tree/BinaryTree.h
        src/tree/impl/BinaryTree_impl.h
        src/tree/BinaryTreeNode.h
        src/tree/impl/BinaryTreeNode_impl.h
        src/tree/TraversalOrder.h
        src/tree/impl/TraversalOrder_impl.h
        src/tree/BinarySearchTree.h
        src/tree/impl/BinarySearchTree_impl.h
        src/container/sequence/impl/DoublyLinkedList_impl.h
        src/lang/HashCode.h
        src/container/associative/HashTable.h
        src/lang/StringBuilder.cpp
        src/lang/StringBuilder.h
        src/lang/String.cpp
        src/lang/String.h
        src/container/associative/Entry.h
        src/StringDemo.cpp
        src/tree/RedBlackTree.h
        src/tree/RedBlackTreeNode.h
        src/tree/AvlTree.h
        src/tree/BinaryBalanceSearchTree.h
        src/util/Color.h
        src/tree/impl/BinaryBalanceSearchTree_impl.h
        src/tree/impl/RedBlackTreeNode_impl.h
        src/util/ColorfulString.cpp
        src/util/ColorfulString.h
        src/tree/Treap.h
        src/tree/impl/RedBlackTree_impl.h
        src/tree/TreapNode.h
        src/tree/OrderStatisticTreeNode.h
        src/tree/OrderStatisticTree.h
        src/util/PermutationIterator.cpp
        src/util/PermutationIterator.h
        src/util/arithmetic/Calculate24.cpp
        src/util/arithmetic/Calculate24.h
        src/lang/exception/OutOfMemoryException.h
        src/util/arithmetic/ArithmeticalOperation.h
        src/util/arithmetic/expression.h
        src/util/arithmetic/Number.cpp
        src/util/arithmetic/Number.h
        src/math/Data.cpp
        src/math/Data.h
        src/lang/packaging/Byte.cpp
        src/lang/packaging/Byte.h
        src/lang/BaseObject.cpp
        src/lang/BaseObject.h
        src/math/BigInteger.cpp
        src/math/BigInteger.h
        src/MathDemo.cpp
        src/lang/exception/DivideZeroException.h
        src/math/ByteCalculator.cpp
        src/math/ByteCalculator.h
        src/math/ShortByteDivider.cpp
        src/math/ShortByteDivider.h
        src/math/Calculator.h
        src/math/commons.h
        src/math/DataBasedCalculator.h
        src/math/ByteBigInteger.cpp
        src/math/ByteBigInteger.h
        src/math/AbstractCalculator.h
        src/math/MathComparable.h
        src/util/sort/SelectionSort.h
        src/CompilerTestDemo.cpp
        src/tree/TraversalOrderNode.h
        src/tree/impl/TraversalOrderNode_impl.h
        src/compiler/analysis/TernaryExpressionPhaserByTree.cpp
        src/compiler/analysis/TernaryExpressionPhaserByTree.h
        src/lang/UInt128.cpp
        src/lang/UInt128.h
        src/tree/Trie.cpp
        src/tree/Trie.h
        src/util/type.h
        src/tree/impl/BTree_impl.h
        src/util/Objects.cpp
        src/util/Objects.h
        src/tree/impl/BTreeNode_impl.h
        src/tree/BTree.h
)
